# dante

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
dante/: __init__.py  asyncdante.py  base.py  sync.py
docs/: api.md  development.md
examples/: fastapi-example-basic-auth.py  fastapi-example-oauth2.py  fastapi-example.py  fastapi_auth.py  hello-async.py  hello-pydantic.py  hello.py  todo.py
tests/: test_async.py  test_async_models.py  test_models.py  test_sync.py
