[project]
name = "dante-db"
version = "0.1.1"
description = "Dante, a document store for Python backed by SQLite"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dante"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "pytest-coverage>=0.0",
    "pytest-asyncio>=0.23.8",
    "pre-commit>=3.8.0",
    "coveralls>=4.0.1",
    "mypy>=1.11.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
